@@ -42,6 +42,9 @@
 22. Set cover-widget icon size to at least twice tab-widget large icon size.
 23. Remove usage of Gtk-style on-off button for Gtk style, and instead give
     checkboxes better text and adjust config layout.
+24. Better control over 'Subscribe' button in podcast search dialog.
+25. When downloading images, dont use extension to determine file format,
+    instead look JFIF and PNG in first few data bytes.
 
 1.2.2
 -----
